--- a/Ingenio.PortalWebExterno/Content/style.red.css
+++ b/Ingenio.PortalWebExterno/Content/style.red.css
@@ -1,3 +1,57 @@
+/* ESTILO PARA EL SLIDER DE IMAGENES*/
+.wrapper{
+  padding: 70px 0;
+  overflow-x: hidden;
+  width:100%;
+}
+
+.my-slider{
+  padding: 0 70px;
+}
+.slick-initialized .slick-slide{
+  /*background-color: #b32532;*/
+  /*color: #FFF;*/
+  /*width:200px;*/
+  /*height: 300px;*/
+  margin: 0 15px 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.imagen-slider {
+    width: 300px;
+    height: 300px;
+}
+
+
+.slick-next, .slick-prev {
+    z-index: 5;
+}
+.slick-next{
+  right: 15px;
+}
+.slick-prev{
+  left: 15px;
+}
+.slick-next:before, .slick-prev:before{
+  color: #000;
+  font-size: 26px;
+}
+
+.container{
+    width:100%;
+}
+
+@media(max-width:1317px) {
+    #nav2 {
+        font-size: 13px;
+    }
+    .navbar-brand > img{
+        margin:0;
+    }
+
+}
 @media(max-width:767px) {
     .img-portfolio {
         margin-bottom: 15px;
@@ -7,6 +61,65 @@
         height: 70%;
     }
 }
+/* FIN DE ESTILO DE SLIDER*/
+
+/* FUNCION DE GIRAR*/
+.girar {
+    /*color:red;*/
+    display: inline-block;
+    /*position: relative;*/
+    /*background-color: rebeccapurple;*/
+    border-radius: 10px;
+    width: 100px;
+    height: 100px;
+}
+
+.girar:hover{
+  animation-name: rotate;
+  animation-duration: 0.8s;
+  animation-iteration-count: 1;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* FIN FUNCION DE GIRAR*/
+
+/*Inicio de Funcion de subrayar*/
+.underline{
+    /*color:red;*/
+    display:inline-block;
+    position:relative;
+}
+.underline:after{
+    content:'';
+    position:absolute;
+    width:100%;
+    height:2px;
+    bottom:0;
+    left:0;
+    background:rgba(224,85,20,0.75);
+    /*background:blue;*/
+    transform:scale(0);
+    transform-origin:bottom right;
+    transition: transform 0.6s ease-out;
+}
+
+.underline:hover:after{
+    transform:scale(1);
+    transform-origin:bottom left;
+}
+/*Fin de Funcion de subrayar*/
+
+
+
 
 .clearfix:before,
 .clearfix:after,
@@ -767,46 +880,70 @@ ul.list-style-none {
     margin: 0;
     font-size: 12px;
 }
-
+/* Se puede modificar el header*/
 #top .social {
     float: right;
     text-align: right;
+    display: flex;
+    flex-direction: row;
+    /*align-items: center;*/
+    /*justify-content: center;*/
 }
 
-    #top .social a {
-        color: #999999;
-        display: inline-block;
-        width: 24px;
-        height: 24px;
-        border-radius: 12px;
-        line-height: 20px;
-        font-size: 12px;
-        text-align: center;
-        vertical-align: bottom;
-    }
+#top .social a{
+
+    font-size: 1em;
+    color: #FB7601;
+    width: 0.5rem;
+    height: 0.5rem;
+    /*border: 3px solid #FB7601;*/
+    border-radius: 50%;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction:row;
+}
+/*#top .social a {
+    color: #999999;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    border-radius: 12px;
+    line-height: 20px;
+    font-size: 16px !important;*/
+    /*text-align: center;*/
+    /*vertical-align: bottom;
+}*/
+
+/* Cambio de colores de redes Sociales*/
 
         #top .social a:hover {
             color: #fff;
         }
 
-            #top .social a:hover.facebook {
+            #top .social a.facebook {
                 background-color: #4460ae;
             }
 
-            #top .social a:hover.gplus {
+            #top .social a.gplus {
                 background-color: #c21f25;
             }
 
-            #top .social a:hover.twitter {
-                background-color: #3cf;
+            #top .social a.twitter {
+                background-color: rgb(29, 155, 240);
             }
 
-            #top .social a:hover.instagram {
-                background-color: #cd4378;
+            #top .social a.instagram {
+                background-image: linear-gradient(to right, rgb(240, 148, 51) 10%, rgb(230, 104, 60) 20%, rgb(220, 39, 67) 60%, rgb(220, 39, 67) 80%, rgb(188, 24, 136) 100%);
             }
 
-            #top .social a:hover.email {
+            #top .social a.email {
                 background-color: #4a7f45;
+            }
+            #top .social a.youtube {
+                background-color: red;
+                color:white;
             }
 
 #top .login {
@@ -858,7 +995,7 @@ ul.list-style-none {
     .navbar ul.nav > li.active > a,
     .navbar ul.nav > li.open > a {
         text-decoration: none !important;
-        border-top: solid 5px #a02121;
+        /*border-top: solid 5px #a02121;*/
     }
 
 @media (max-width: 768px) {
@@ -896,17 +1033,41 @@ ul.list-style-none {
     padding: 0;
 }
 
+
     .navbar ul.dropdown-menu li {
+        width:100%;
+        display:inline-block;
+        position:relative;
         list-style-type: none;
-        border-bottom: solid 1px #eeeeee;
-        text-transform: uppercase;
+        /*border-bottom: solid 1px #eeeeee;*/
+        /*text-transform: uppercase;*/
         letter-spacing: 0.08em;
         padding: 4px 0;
     }
 
+    .navbar ul.dropdown-menu li:after{
+        content:'';
+        position:absolute;
+        width:100%;
+        height:2px;
+        bottom:0;
+        left:0;
+        background:#EFB810;
+        /*background:blue;*/
+        transform:scale(0);
+        transform-origin:bottom right;
+        transition: transform 0.6s ease-out;
+    }
+    .navbar ul.dropdown-menu li:hover:after {
+    transform: scale(1);
+    transform-origin: bottom left;
+    }
+
+
         .navbar ul.dropdown-menu li a {
             position: relative;
-            color: #999999;
+            color:white;
+            /*color: #999999;*/
             font-size: 12px;
             display: block;
             -webkit-transition: all 0.2s ease-out;
@@ -916,13 +1077,14 @@ ul.list-style-none {
         }
 
             .navbar ul.dropdown-menu li a:hover {
-                color: #da4d4d;
+                /*color: #da4d4d;*/
+                /*background:rgba(224,85,20,1);*/
                 text-decoration: none;
                 background: none;
                 left: 2px;
-                -webkit-transition: all 0.2s ease-out;
-                -moz-transition: all 0.2s ease-out;
-                transition: all 0.2s ease-out;
+                /*-webkit-transition: all 0.2s ease-out;*/
+                /*-moz-transition: all 0.2s ease-out;*/
+                /*transition: all 0.2s ease-out;*/
             }
 
 @media (max-width: 767px) {
@@ -2172,8 +2334,8 @@ body.boxed .navbar-affixed-top.affix {
 }
 
     .box-simple .icon {
-        color: #da4d4d;
-        border-color: #da4d4d;
+        color: rgba(224,85,20,0.75);
+        border-color: rgba(224,85,20,0.75);
         -webkit-transition: all 0.2s ease-out;
         -moz-transition: all 0.2s ease-out;
         transition: all 0.2s ease-out;
@@ -3650,7 +3812,8 @@ body.boxed .navbar-affixed-top.affix {
 .nav .open > a:hover,
 .nav .open > a:focus {
     background-color: #eeeeee;
-    border-color: #da4d4d;
+    /*border-color: #da4d4d;*/
+    border-color:white;
 }
 
 .nav-tabs {
@@ -4065,8 +4228,11 @@ body.boxed .navbar-affixed-top.affix {
 
 .navbar-nav > li > .dropdown-menu {
     margin-top: 0;
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
+    /*border-radius:5%;*/
+    /*border-top-right-radius: 0;*/
+    /*border-top-left-radius: 0;*/
+    background: rgba(224,85,20,0.8);
+    color: white;
 }
 
 .navbar-fixed-bottom .navbar-nav > li > .dropdown-menu {
@@ -4130,8 +4296,8 @@ body.boxed .navbar-affixed-top.affix {
         color: #555555;
     }
 
-        .navbar-default .navbar-nav > li > a:hover,
-        .navbar-default .navbar-nav > li > a:focus {
+        .navbar-default .navbar-nav > li > a:hover
+        {
             color: rgba(224,85,20,0.75);
             /*background-color: #eca1a1;*/
             /*background-color: rgba(224,85,20,0.75);*/
@@ -4172,9 +4338,13 @@ body.boxed .navbar-affixed-top.affix {
     .navbar-default .navbar-nav > .open > a,
     .navbar-default .navbar-nav > .open > a:hover,
     .navbar-default .navbar-nav > .open > a:focus {
-        background-color: #da4d4d;
-        color: #ffffff;
+        /*        background-color: #da4d4d;
+        color: #ffffff;*/
+        background: white;
+
+        color: rgba(224,85,20,0.75);
     }
+
 
 @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
