--- a/Ingenio.PortalWebExterno/Content/sass/prueba.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/prueba.scss
@@ -1,432 +1,262 @@
-﻿.Prueba_sass {
-    font-size: 16px;
-    color:aqua;
+﻿section.section {
+    background: transparent;
 }
 
-@mixin material-shadow() {
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.23), 0 10px 40px rgba(0, 0, 0, 0.19);
+.slideshow {
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.3);
+
+    .slide img {
+        max-width: 10px;
+        width: 10px;
+    }
+
+    .slick-prev:before,
+    .slick-next:before {
+        color: black;
+    }
 }
 
-$module-font-size: 14px;
-$bezier: cubic-bezier(.25,.8,.25,1);
 
-body {
-    color: white;
-    font-family: "Lato";
-    font-weight: light;
+$primary-color: rgba(224, 85, 20, 0.75);
+$secondary-color: red;
+$unit: 6px;
+
+@function size($value){
+    @return $value * $unit;
+}
+
+@mixin obj-centrado() {
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    background: linear-gradient(150deg, #e6d3f9 0%, #e6d3f9 50%, #cea0f1 50%, #cea0f1 100%);
+    justify-content: center;
 }
 
-.open-walkthrough {
-    border: 0;
-    background: #5da3f2;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 0.15em;
-    font-size: 12px;
-    height: 40px;
-    width: 120px;
+.slick-initialized .slick-slide {
+    @include obj-centrado();
+    margin: 0 15px 0 0;
+}
+
+#top {
+    background-color: $primary-color;
+    color: #eeeeee;
+    padding: 10px 0;
+}
+
+
+.titulos > h3 {
+    font-size: size(5);
+}
+@media screen and (max-width: 899px) {
+    .content-video {
+        @include obj-centrado();
+        margin: 0;
+    }
+    .tarjetas-Centradas {
+        @include obj-centrado();
+        flex-direction: column;
+        margin: 30px;
+    }
+}
+@media (min-width: 900px) {
+    .tarjetas-Centradas {
+        @include obj-centrado();
+        flex-direction: column;
+        margin: 30px;
+    }
+}
+
+
+// Navigation Variables
+$content-width: 1000px;
+$breakpoint: 799px;
+$nav-height: 70px;
+$nav-background: #262626;
+$nav-font-color: #ffffff;
+$link-hover-color: #2581DC;
+
+// Outer navigation wrapper
+.navigation {
+    height: $nav-height;
+    background: $nav-background;
+}
+
+// Logo and branding
+.brand {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -20px;
-    margin-left: -60px;
+    padding-left: 20px;
+    float: left;
+    line-height: $nav-height;
+    text-transform: uppercase;
+    font-size: 1.4em;
+
+    a,
+    a:visited {
+        color: $nav-font-color;
+        text-decoration: none;
+    }
 }
 
-// =================================================================================================
-// Walkthrough
-// =================================================================================================
-.walkthrough {
-    @include material-shadow();
-    background: linear-gradient(to right bottom, #9e66c6, #6027e1);
-    border-radius: 0;
-    display: none;
-    flex-direction: column;
-    flex: 0 0 auto;
-    font-size: $module-font-size;
-    height: 464px;
-    overflow: hidden;
-    transition: opacity 0.4s $bezier, transform 0.4s $bezier, box-shadow 0.4s $bezier;
-    width: 280px;
-    z-index: 1000;
+// Container with no padding for navbar
+.nav-container {
+    max-width: $content-width;
+    margin: 0 auto;
+}
 
-    &.show {
-        display: flex;
-        opacity: 0;
-        transform: translateY(72px);
-    }
+// Navigation
+nav {
+    float: right;
 
-    &.reveal {
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    .walkthrough-body {
-        align-items: center;
-        display: flex;
-        flex: 1;
-        text-align: center;
-
-        .prev-screen,
-        .next-screen {
-            align-self: stretch;
-            background: none;
-            border: 0;
-            margin-top: 40px;
-            color: rgba(white, 0.25);
-            cursor: pointer;
-            flex: 0 0 auto;
-            font-size: 24px;
-            opacity: 1;
-            outline: none;
-            padding: 16px;
-            transform: scale(1);
-            transition: transform 0.4s $bezier, color 0.4s $bezier, opacity 0.4s $bezier;
-            z-index: 1000;
-
-            &:hover,
-            &:active {
-                color: white;
-                transform-origin: center;
-                transform: scale(1.25);
-            }
-
-            &:disabled {
-                opacity: 0;
-            }
-        }
-
-        .prev-screen {
-            order: 1;
-        }
-
-        .next-screen {
-            order: 3;
-        }
-
-        .screens {
-            flex: 1;
-            align-self: stretch;
-            position: relative;
-            margin: 0 -16px;
-            padding: 0;
-            order: 2;
-
-            .screen {
-                position: absolute;
-                list-style-type: none;
-            }
-        }
-
-        .media {
-            background: rgba(white, 0.25);
-            border-radius: 132px;
-            height: 132px;
-            margin: 32px auto;
-            width: 132px;
-        }
-
-        h3 {
-            font-size: 15px;
-            line-height: 1.4em;
-            text-transform: uppercase;
-            letter-spacing: 0.15em;
-        }
-
-        p {
-            line-height: 1.6em;
-            font-size: 13px;
-            margin-top: 16px;
-            padding-top: 0;
-            color: rgba(white, 0.8);
-        }
-    }
-
-    .walkthrough-pagination {
-        align-items: center;
-        display: flex;
-        justify-content: center;
-        margin-top: 24px;
-
-        .dot {
-            background: rgba(black, 0.25);
-            border-radius: 8px;
-            height: 8px;
-            margin: 0 4px;
-            transform: scale(0.75);
-            transition: transform 0.4s $bezier, background 0.4s $bezier;
-            width: 8px;
-
-            &.active {
-                background: white;
-                transform: scale(1);
-                transition-delay: 0.4s;
-            }
-        }
-    }
-
-    .walkthrough-footer {
-        display: flex;
-        flex: 0 0 auto;
-        justify-content: space-around;
+    ul {
+        list-style: none;
+        margin: 0;
         padding: 0;
 
-        button {
-            height: 40px;
-            border: 0;
-            background: #5da3f2;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 0.15em;
-            border-radius: 0;
-            color: white;
-            flex: 1;
-            font-size: 12px;
-            margin: 0;
-            outline: 0;
-            padding: 12px;
-            transition: opacity 0.4s $bezier, background 0.4s $bezier;
-            cursor: pointer;
+        li {
+            float: left;
+            position: relative;
 
-            &:hover {
-                background: lighten(#5da3f2, 3%);
-            }
-
-            &:active {
-                background: #5da3f2;
-            }
-
-            &:disabled {
-                cursor: pointer;
-            }
-
-            &.finish {
-                background: #3e94f5;
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-                opacity: 0;
-                transform: scale(0, 1);
-                transform-origin: center;
-                transition: opacity 0.4s $bezier, background 0.4s $bezier, transform 0.4s $bezier;
+            a,
+            a:visited {
+                display: block;
+                padding: 0 20px;
+                line-height: $nav-height;
+                background: $nav-background;
+                color: $nav-font-color;
+                text-decoration: none;
 
                 &:hover {
-                    background: lighten(#3e94f5, 3%);
+                    background: $link-hover-color;
+                    color: $nav-font-color;
                 }
 
-                &:active {
-                    background: #3e94f5;
+                &:not(:only-child):after {
+                    padding-left: 4px;
+                    content: ' ▾';
                 }
+            }
+            // Dropdown list
+            ul li {
+                min-width: 190px;
 
-                &.active {
-                    transform: scale(1, 1);
-                    opacity: 1;
+                a {
+                    padding: 15px;
+                    line-height: 20px;
                 }
             }
         }
     }
-    //Animation styles
+}
 
-    .screens {
-        margin: 0;
+// Dropdown list binds to JS toggle event
+.nav-dropdown {
+    position: absolute;
+    display: none;
+    z-index: 1;
+    box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
+}
 
-        .media {
-            .status-badge {
-                left: 136px;
-                opacity: 0;
-                position: absolute;
-                top: 104px;
-                transform: scale(0);
-                transition: opacity 0.4s $bezier, transform 0.4s $bezier;
-                transition-delay: 0.6s;
+/* Mobile navigation */
 
-                i {
-                    display: inline;
-                }
-            }
+// Binds to JS Toggle
+.nav-mobile {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: $nav-background;
+    height: $nav-height;
+    width: $nav-height;
+}
 
-            &.logo {
-                .logo {
-                    margin-top: 20px;
-                    opacity: 0;
-                    transform: translateY(-60px);
-                    transition: opacity 0.4s $bezier, transform 0.4s $bezier;
-                    width: 80px;
-                }
-            }
+@media only screen and (max-width: 798px) {
+    // Hamburger nav visible on mobile only
+    .nav-mobile {
+        display: block;
+    }
 
-            .icon {
-                position: absolute;
-                opacity: 0;
-                transform: translateY(-30px);
-                transition: opacity 0.4s $bezier, transform 0.4s $bezier;
-                width: 132px;
-                left: 48px;
-                top: 32px;
-            }
+    nav {
+        width: 100%;
+        padding: $nav-height 0 15px;
 
-            &.bars {
-                .icon {
-                    transform: translate(40px, 20px);
+        ul {
+            display: none;
 
-                    &:nth-of-type(2) {
-                        transform: scale(0.25);
-                        transform-origin: 30% 54%;
-                    }
+            li {
+                float: none;
 
-                    &:nth-of-type(3) {
-                        transform: scale(0.25);
-                        transform-origin: 30% 40%;
-                    }
-
-                    &:nth-of-type(4) {
-                        transform: scale(0.25);
-                        transform-origin: 30% 26%;
-                    }
-                }
-            }
-
-            &.files {
-                .icon {
-                    transform: translate(40px, 20px);
-                }
-            }
-
-            &.comm {
-                .icon {
-                    transform: scale(0.25);
-                    transform-origin: 29% 73%;
-
-                    &:nth-child(2) {
-                        transform-origin: 66% 85%;
-                    }
-                }
-            }
-        }
-
-        .screen {
-            opacity: 0;
-            position: absolute;
-            transform: translateX(-72px);
-            transition: all 0.4s $bezier;
-
-            &.active {
-                opacity: 1;
-                transform: translateX(0) scale(1);
-                transition-delay: 0.4s;
-
-                ~ .screen {
-                    opacity: 0;
-                    transform: translateX(72px);
+                a {
+                    padding: 15px;
+                    line-height: 20px;
                 }
 
-                .media {
-                    .status-badge {
-                        opacity: 1;
-                        transform: scale(1.75);
-                    }
-
-                    &.logo {
-
-                        .logo {
-                            opacity: 0.8;
-                            transform: translateY(0);
-                            transition-delay: 0.6s;
-                        }
-
-                        .status-badge {
-                            transition-delay: 1s;
-                        }
-                    }
-
-                    &.books {
-                        .icon {
-                            opacity: 1;
-                            transform: translateY(0);
-                            transition-delay: 0.6s;
-
-                            &:nth-child(2) {
-                                transition-delay: 0.725s;
-                            }
-
-                            &:nth-child(3) {
-                                transition-delay: 0.850s;
-                            }
-                        }
-
-                        .status-badge {
-                            transition-delay: 1.4s;
-                        }
-                    }
-
-                    &.bars {
-                        .icon {
-                            opacity: 1;
-                            transform: translate(0) scale(1);
-                            transition-delay: 0.6s;
-
-                            &:nth-child(2) {
-                                transition-delay: 1.050s;
-                            }
-
-                            &:nth-child(3) {
-                                transition-delay: 0.925s;
-                            }
-
-                            &:nth-child(4) {
-                                transition-delay: 0.8s;
-                            }
-                        }
-                    }
-
-                    &.files {
-                        .icon {
-                            opacity: 1;
-                            transform: translateY(0);
-                            transition-delay: 0.9s;
-
-                            &:nth-child(3) {
-                                transition-delay: 0.8s;
-                            }
-
-                            &:nth-child(2) {
-                                transition-delay: 0.7s;
-                            }
-
-                            &:nth-child(1) {
-                                transition-delay: 0.6s;
-                            }
-                        }
-
-                        .status-badge {
-                            transition-delay: 1.6s;
-                        }
-                    }
-
-                    &.comm {
-                        .icon {
-                            opacity: 1;
-                            transform: scale(1);
-                            transition-delay: 0.6s;
-
-                            &:nth-child(2) {
-                                transition-delay: 0.8s;
-                            }
-                        }
-
-                        .status-badge {
-                            transition-delay: 1.6s;
-                        }
-                    }
+                ul li a {
+                    padding-left: 30px;
                 }
             }
         }
     }
+
+    .nav-dropdown {
+        position: static;
+    }
+}
+
+@media screen and (min-width: $breakpoint) {
+    .nav-list {
+        display: block !important;
+    }
+}
+
+#nav-toggle {
+    position: absolute;
+    left: 18px;
+    top: 22px;
+    cursor: pointer;
+    padding: 10px 35px 16px 0px;
+
+    span,
+    span:before,
+    span:after {
+        cursor: pointer;
+        border-radius: 1px;
+        height: 5px;
+        width: 35px;
+        background: $nav-font-color;
+        position: absolute;
+        display: block;
+        content: '';
+        transition: all 300ms ease-in-out;
+    }
+
+    span:before {
+        top: -10px;
+    }
+
+    span:after {
+        bottom: -10px;
+    }
+
+    &.active span {
+        background-color: transparent;
+
+        &:before,
+        &:after {
+            top: 0;
+        }
+
+        &:before {
+            transform: rotate(45deg);
+        }
+
+        &:after {
+            transform: rotate(-45deg);
+        }
+    }
+}
+
+// Page content
+article {
+    max-width: $content-width;
+    margin: 0 auto;
+    padding: 10px;
 }
